/**
 * ×‘×“×™×§×” ××§×™×¤×” ×©×œ ×ª×§×©×•×¨×ª ×¢× Coordinator
 * ×‘×•×“×§ ×›×œ ×”××¤×©×¨×•×™×•×ª: TCP Proxy, SSL, Direct connection
 * 
 * ×©×™××•×©:
 *   node scripts/test-coordinator-comprehensive.js
 */

import { routeRequest, isCoordinatorAvailable } from '../src/clients/coordinator.client.js';
import { generateSignature } from '../src/utils/signature.js';
import { logger } from '../src/utils/logger.util.js';
import { readFileSync } from 'fs';
import { join, dirname } from 'path';
import { fileURLToPath } from 'url';

const __filename = fileURLToPath(import.meta.url);
const __dirname = dirname(__filename);

console.log('\nğŸ§ª ×‘×“×™×§×” ××§×™×¤×” ×©×œ ×ª×§×©×•×¨×ª ×¢× Coordinator\n');

// ×˜×¢×™× ×ª ××¤×ª×— ×¤×¨×˜×™ ×× ×§×™×™×
function loadPrivateKey() {
  try {
    const keyPath = join(__dirname, '../keys/rag-service-private-key.pem');
    const keyContent = readFileSync(keyPath, 'utf-8');
    const base64Key = Buffer.from(keyContent, 'utf-8').toString('base64');
    process.env.RAG_PRIVATE_KEY = base64Key;
    console.log('âœ… ××¤×ª×— ×¤×¨×˜×™ × ×˜×¢×Ÿ ××”×§×•×‘×¥\n');
    return true;
  } catch (error) {
    if (process.env.RAG_PRIVATE_KEY) {
      console.log('âœ… ××©×ª××© ×‘-RAG_PRIVATE_KEY ××”×¡×‘×™×‘×”\n');
      return true;
    }
    console.log('âš ï¸  ×œ× × ××¦× ××¤×ª×— ×¤×¨×˜×™ - ×‘×“×™×§×ª ×—×ª×™××•×ª ×ª×™×›×©×œ\n');
    return false;
  }
}

// ×”×’×“×¨×•×ª ×©×•× ×•×ª ×œ×‘×“×™×§×”
const testConfigs = [
  {
    name: 'TCP Proxy (gondola.proxy.rlwy.net)',
    url: 'gondola.proxy.rlwy.net',
    port: '16335',
    ssl: false,
  },
  {
    name: 'TCP Proxy ×¢× SSL',
    url: 'gondola.proxy.rlwy.net',
    port: '16335',
    ssl: true,
  },
  {
    name: 'Direct URL (coordinator-production)',
    url: 'coordinator-production-6004.up.railway.app',
    port: '50051',
    ssl: false,
  },
  {
    name: 'Direct URL ×¢× SSL',
    url: 'coordinator-production-6004.up.railway.app',
    port: '50051',
    ssl: true,
  },
  {
    name: 'Localhost (development)',
    url: 'localhost',
    port: '50051',
    ssl: false,
  },
];

async function testConfig(config) {
  console.log(`\nğŸ“‹ ×‘×•×“×§: ${config.name}`);
  console.log(`   URL: ${config.url}:${config.port}`);
  console.log(`   SSL: ${config.ssl ? 'Yes' : 'No'}`);
  
  // ×”×’×“×¨×ª ××©×ª× ×™ ×¡×‘×™×‘×”
  const originalUrl = process.env.COORDINATOR_URL;
  const originalPort = process.env.COORDINATOR_GRPC_PORT;
  const originalSSL = process.env.GRPC_USE_SSL;
  const originalProto = process.env.COORDINATOR_PROTO_PATH;
  
  process.env.COORDINATOR_URL = config.url;
  process.env.COORDINATOR_GRPC_PORT = config.port;
  process.env.GRPC_USE_SSL = config.ssl ? 'true' : 'false';
  process.env.COORDINATOR_PROTO_PATH = process.env.COORDINATOR_PROTO_PATH || 
    join(__dirname, '../../DATABASE/proto/rag/v1/coordinator.proto');
  
  try {
    // ×‘×“×™×§×ª ×–××™× ×•×ª
    console.log('   ğŸ” ×‘×•×“×§ ×–××™× ×•×ª...');
    const available = await isCoordinatorAvailable();
    
    if (!available) {
      console.log('   âŒ ×œ× ×–××™×Ÿ');
      return false;
    }
    
    console.log('   âœ… ×–××™×Ÿ!');
    
    // ×‘×“×™×§×ª ×—×ª×™××”
    if (process.env.RAG_PRIVATE_KEY) {
      console.log('   ğŸ” ×‘×•×“×§ ×™×¦×™×¨×ª ×—×ª×™××”...');
      try {
        const testPayload = {
          tenant_id: 'test-tenant',
          user_id: 'test-user',
          query_text: 'test query',
        };
        const signature = generateSignature('rag-service', 
          Buffer.from(process.env.RAG_PRIVATE_KEY, 'base64').toString('utf-8'),
          testPayload
        );
        if (signature) {
          console.log('   âœ… ×—×ª×™××” × ×•×¦×¨×” ×‘×”×¦×œ×—×”');
        } else {
          console.log('   âŒ ×—×ª×™××” ×œ× × ×•×¦×¨×”');
        }
      } catch (error) {
        console.log(`   âŒ ×©×’×™××” ×‘×™×¦×™×¨×ª ×—×ª×™××”: ${error.message}`);
      }
    }
    
    // ×‘×“×™×§×ª ×©×œ×™×—×ª ×‘×§×©×”
    console.log('   ğŸ” ×©×•×œ×— ×‘×§×©×”...');
    try {
      const response = await routeRequest({
        tenant_id: 'test-tenant-123',
        user_id: 'test-user-456',
        query_text: 'test query for routing',
        metadata: {
          source: 'comprehensive-test',
          timestamp: new Date().toISOString(),
        },
      });
      
      if (response) {
        console.log('   âœ… ×‘×§×©×” × ×©×œ×—×” ×‘×”×¦×œ×—×”!');
        console.log(`   ğŸ“¦ ×ª×’×•×‘×”: ${JSON.stringify(response, null, 2).substring(0, 200)}...`);
        return true;
      } else {
        console.log('   âš ï¸  ×œ× ×§×™×‘×œ× ×• ×ª×’×•×‘×”');
        return false;
      }
    } catch (error) {
      console.log(`   âŒ ×©×’×™××” ×‘×©×œ×™×—×ª ×‘×§×©×”: ${error.message}`);
      return false;
    }
  } catch (error) {
    console.log(`   âŒ ×©×’×™××”: ${error.message}`);
    return false;
  } finally {
    // ×©×—×–×•×¨ ××©×ª× ×™ ×¡×‘×™×‘×”
    if (originalUrl) process.env.COORDINATOR_URL = originalUrl;
    if (originalPort) process.env.COORDINATOR_GRPC_PORT = originalPort;
    if (originalSSL) process.env.GRPC_USE_SSL = originalSSL;
    if (originalProto) process.env.COORDINATOR_PROTO_PATH = originalProto;
  }
}

async function runTests() {
  // ×˜×¢×™× ×ª ××¤×ª×— ×¤×¨×˜×™
  const hasKey = loadPrivateKey();
  
  console.log('ğŸ” ××ª×—×™×œ ×‘×“×™×§×•×ª ×¢× ×›×œ ×”×”×’×“×¨×•×ª...\n');
  
  const results = [];
  
  for (const config of testConfigs) {
    const success = await testConfig(config);
    results.push({ config, success });
    
    // ×”×¤×¡×§×” ×§×¦×¨×” ×‘×™×Ÿ ×‘×“×™×§×•×ª
    await new Promise(resolve => setTimeout(resolve, 2000));
  }
  
  // ×¡×™×›×•×
  console.log('\n\nğŸ“Š ×¡×™×›×•× ×ª×•×¦××•×ª:\n');
  
  const successful = results.filter(r => r.success);
  const failed = results.filter(r => !r.success);
  
  if (successful.length > 0) {
    console.log('âœ… ×”×’×“×¨×•×ª ×©×¢×•×‘×“×•×ª:');
    successful.forEach(r => {
      console.log(`   - ${r.config.name} (${r.config.url}:${r.config.port})`);
    });
  }
  
  if (failed.length > 0) {
    console.log('\nâŒ ×”×’×“×¨×•×ª ×©×œ× ×¢×•×‘×“×•×ª:');
    failed.forEach(r => {
      console.log(`   - ${r.config.name} (${r.config.url}:${r.config.port})`);
    });
  }
  
  if (successful.length === 0) {
    console.log('\nâš ï¸  ××£ ×”×’×“×¨×” ×œ× ×¢×‘×“×”!');
    console.log('\nğŸ’¡ ×¤×ª×¨×•× ×•×ª ××¤×©×¨×™×™×:');
    console.log('   1. ×‘×“×•×§ ×©-Coordinator ×¨×¥ ×‘-Railway');
    console.log('   2. ×‘×“×•×§ ××ª ×”-logs ×©×œ Coordinator');
    console.log('   3. ×‘×“×•×§ ×©-gRPC port (50051) ×—×©×•×£');
    console.log('   4. × ×¡×” ×œ×”×©×ª××© ×‘-private networking ×‘-Railway');
    console.log('   5. ×‘×“×•×§ ×©-TCP Proxy ××•×’×“×¨ × ×›×•×Ÿ');
  } else {
    console.log(`\nâœ… × ××¦××• ${successful.length} ×”×’×“×¨×•×ª ×©×¢×•×‘×“×•×ª!`);
    console.log('ğŸ’¡ ×”×©×ª××© ×‘×”×’×“×¨×•×ª ×©×¢×•×‘×“×•×ª ×‘-production');
  }
  
  console.log('\n');
}

runTests().catch(error => {
  console.error('âŒ ×©×’×™××” ×‘×‘×“×™×§×”:', error);
  process.exit(1);
});

