/**
 * ×‘×“×™×§×” ×¡×•×¤×™×ª ×©×œ ×ª×§×©×•×¨×ª ×¢× Coordinator
 * ×‘×•×“×§ ××ª ×›×œ ×”××¤×©×¨×•×™×•×ª ×•××¦×™×’ ×¡×™×›×•×
 */

import { routeRequest, isCoordinatorAvailable } from '../src/clients/coordinator.client.js';
import { generateSignature } from '../src/utils/signature.js';
import { logger } from '../src/utils/logger.util.js';
import { readFileSync } from 'fs';
import { join, dirname } from 'path';
import { fileURLToPath } from 'url';

const __filename = fileURLToPath(import.meta.url);
const __dirname = dirname(__filename);

console.log('\nğŸ§ª ×‘×“×™×§×” ×¡×•×¤×™×ª ×©×œ ×ª×§×©×•×¨×ª ×¢× Coordinator\n');

// ×˜×¢×™× ×ª ××¤×ª×— ×¤×¨×˜×™
function loadPrivateKey() {
  try {
    const keyPath = join(__dirname, '../keys/rag-service-private-key.pem');
    const keyContent = readFileSync(keyPath, 'utf-8');
    const base64Key = Buffer.from(keyContent, 'utf-8').toString('base64');
    process.env.RAG_PRIVATE_KEY = base64Key;
    return true;
  } catch (error) {
    if (process.env.RAG_PRIVATE_KEY) {
      return true;
    }
    return false;
  }
}

// ×”×’×“×¨×•×ª ×œ×‘×“×™×§×”
const testConfigs = [
  {
    name: 'Private Networking (Railway)',
    endpoint: 'coordinator.railway.internal:50051',
    ssl: false,
    note: '×¢×•×‘×“ ×¨×§ ×‘×ª×•×š Railway'
  },
  {
    name: 'Public URL - Port 443 (HTTPS)',
    endpoint: 'coordinator-production-6004.up.railway.app:443',
    ssl: true,
    note: '×¢×•×‘×“ ×’× ×-local'
  },
  {
    name: 'Public URL - Port 50051',
    endpoint: 'coordinator-production-6004.up.railway.app:50051',
    ssl: false,
    note: '×¦×¨×™×š TCP Proxy'
  },
  {
    name: 'Public URL - Port 50051 (SSL)',
    endpoint: 'coordinator-production-6004.up.railway.app:50051',
    ssl: true,
    note: '×¦×¨×™×š TCP Proxy'
  },
];

async function testConfig(config) {
  console.log(`\nğŸ“‹ ×‘×•×“×§: ${config.name}`);
  console.log(`   Endpoint: ${config.endpoint}`);
  console.log(`   SSL: ${config.ssl ? 'Yes' : 'No'}`);
  if (config.note) {
    console.log(`   ğŸ’¡ ${config.note}`);
  }
  
  // ×©××™×¨×ª ×”×’×“×¨×•×ª ×§×•×“××•×ª
  const originalEndpoint = process.env.COORDINATOR_GRPC_ENDPOINT;
  const originalSSL = process.env.GRPC_USE_SSL;
  const originalProto = process.env.COORDINATOR_PROTO_PATH;
  
  // ×”×’×“×¨×ª ××©×ª× ×™ ×¡×‘×™×‘×”
  process.env.COORDINATOR_GRPC_ENDPOINT = config.endpoint;
  process.env.GRPC_USE_SSL = config.ssl ? 'true' : 'false';
  process.env.COORDINATOR_PROTO_PATH = process.env.COORDINATOR_PROTO_PATH || 
    join(__dirname, '../../DATABASE/proto/rag/v1/coordinator.proto');
  
  try {
    // ×‘×“×™×§×ª ×–××™× ×•×ª
    console.log('   ğŸ” ×‘×•×“×§ ×–××™× ×•×ª...');
    const available = await isCoordinatorAvailable();
    
    if (!available) {
      console.log('   âŒ ×œ× ×–××™×Ÿ');
      return { success: false, reason: 'Not available' };
    }
    
    console.log('   âœ… ×–××™×Ÿ!');
    
    // ×‘×“×™×§×ª ×—×ª×™××”
    if (process.env.RAG_PRIVATE_KEY) {
      console.log('   ğŸ” ×‘×•×“×§ ×™×¦×™×¨×ª ×—×ª×™××”...');
      try {
        const testPayload = {
          tenant_id: 'test-tenant',
          user_id: 'test-user',
          query_text: 'test query',
        };
        const signature = generateSignature('rag-service', 
          Buffer.from(process.env.RAG_PRIVATE_KEY, 'base64').toString('utf-8'),
          testPayload
        );
        if (signature) {
          console.log('   âœ… ×—×ª×™××” × ×•×¦×¨×” ×‘×”×¦×œ×—×”');
        } else {
          console.log('   âŒ ×—×ª×™××” ×œ× × ×•×¦×¨×”');
          return { success: false, reason: 'Signature generation failed' };
        }
      } catch (error) {
        console.log(`   âŒ ×©×’×™××” ×‘×™×¦×™×¨×ª ×—×ª×™××”: ${error.message}`);
        return { success: false, reason: `Signature error: ${error.message}` };
      }
    }
    
    // ×‘×“×™×§×ª ×©×œ×™×—×ª ×‘×§×©×”
    console.log('   ğŸ” ×©×•×œ×— ×‘×§×©×”...');
    try {
      const startTime = Date.now();
      const response = await routeRequest({
        tenant_id: 'test-tenant-123',
        user_id: 'test-user-456',
        query_text: 'test query for routing',
        metadata: {
          source: 'final-test',
          timestamp: new Date().toISOString(),
        },
      });
      
      const duration = Date.now() - startTime;
      
      if (response) {
        console.log(`   âœ… ×‘×§×©×” × ×©×œ×—×” ×‘×”×¦×œ×—×”! (${duration}ms)`);
        console.log(`   ğŸ“¦ ×ª×’×•×‘×”: ${JSON.stringify(response).substring(0, 200)}...`);
        return { success: true, duration };
      } else {
        console.log('   âš ï¸  ×œ× ×§×™×‘×œ× ×• ×ª×’×•×‘×”');
        return { success: false, reason: 'No response' };
      }
    } catch (error) {
      console.log(`   âŒ ×©×’×™××” ×‘×©×œ×™×—×ª ×‘×§×©×”: ${error.message}`);
      return { success: false, reason: error.message };
    }
  } catch (error) {
    console.log(`   âŒ ×©×’×™××”: ${error.message}`);
    return { success: false, reason: error.message };
  } finally {
    // ×©×—×–×•×¨ ××©×ª× ×™ ×¡×‘×™×‘×”
    if (originalEndpoint) process.env.COORDINATOR_GRPC_ENDPOINT = originalEndpoint;
    if (originalSSL) process.env.GRPC_USE_SSL = originalSSL;
    if (originalProto) process.env.COORDINATOR_PROTO_PATH = originalProto;
  }
}

async function runTests() {
  // ×˜×¢×™× ×ª ××¤×ª×— ×¤×¨×˜×™
  const hasKey = loadPrivateKey();
  if (!hasKey) {
    console.log('âš ï¸  ×œ× × ××¦× ××¤×ª×— ×¤×¨×˜×™ - ×‘×“×™×§×ª ×—×ª×™××•×ª ×ª×™×›×©×œ\n');
  } else {
    console.log('âœ… ××¤×ª×— ×¤×¨×˜×™ × ×˜×¢×Ÿ\n');
  }
  
  console.log('ğŸ” ××ª×—×™×œ ×‘×“×™×§×•×ª ×¢× ×›×œ ×”×”×’×“×¨×•×ª...\n');
  
  const results = [];
  
  for (const config of testConfigs) {
    const result = await testConfig(config);
    results.push({ config, result });
    
    // ×”×¤×¡×§×” ×§×¦×¨×” ×‘×™×Ÿ ×‘×“×™×§×•×ª
    await new Promise(resolve => setTimeout(resolve, 2000));
  }
  
  // ×¡×™×›×•×
  console.log('\n\nğŸ“Š ×¡×™×›×•× ×ª×•×¦××•×ª:\n');
  
  const successful = results.filter(r => r.result.success);
  const failed = results.filter(r => !r.result.success);
  
  if (successful.length > 0) {
    console.log('âœ… ×”×’×“×¨×•×ª ×©×¢×•×‘×“×•×ª:');
    successful.forEach(r => {
      console.log(`   - ${r.config.name}`);
      console.log(`     Endpoint: ${r.config.endpoint}`);
      if (r.result.duration) {
        console.log(`     ×–××Ÿ ×ª×’×•×‘×”: ${r.result.duration}ms`);
      }
      console.log('');
    });
  }
  
  if (failed.length > 0) {
    console.log('âŒ ×”×’×“×¨×•×ª ×©×œ× ×¢×•×‘×“×•×ª:');
    failed.forEach(r => {
      console.log(`   - ${r.config.name}`);
      console.log(`     Endpoint: ${r.config.endpoint}`);
      console.log(`     ×¡×™×‘×”: ${r.result.reason}`);
      console.log('');
    });
  }
  
  if (successful.length === 0) {
    console.log('âš ï¸  ××£ ×”×’×“×¨×” ×œ× ×¢×‘×“×”!');
    console.log('\nğŸ’¡ ×¤×ª×¨×•× ×•×ª ××¤×©×¨×™×™×:');
    console.log('   1. ×‘×“×•×§ ×©-Coordinator ×¨×¥ ×‘-Railway');
    console.log('   2. ×‘×“×•×§ ×©-GRPC_ENABLED=true ×‘-Coordinator');
    console.log('   3. ×‘×“×•×§ ×©-port 50051 ×—×©×•×£');
    console.log('   4. ×× ××ª×” ×¢×œ local machine, ×”×©×ª××© ×‘-public URL ×¢× port 443');
    console.log('   5. ×× ××ª×” ×¢×œ Railway, ×”×©×ª××© ×‘-private networking');
  } else {
    console.log(`\nâœ… × ××¦××• ${successful.length} ×”×’×“×¨×•×ª ×©×¢×•×‘×“×•×ª!`);
    console.log('ğŸ’¡ ×”×©×ª××© ×‘×”×’×“×¨×•×ª ×©×¢×•×‘×“×•×ª ×‘-production\n');
    
    // ×”××œ×¦×”
    const bestConfig = successful[0];
    console.log('ğŸ¯ ×”××œ×¦×”:');
    console.log(`   COORDINATOR_GRPC_ENDPOINT=${bestConfig.config.endpoint}`);
    console.log(`   GRPC_USE_SSL=${bestConfig.config.ssl ? 'true' : 'false'}\n`);
  }
}

runTests().catch(error => {
  console.error('âŒ ×©×’×™××” ×‘×‘×“×™×§×”:', error);
  process.exit(1);
});



