/**
 * ×‘×“×™×§×ª × ×™×ª×•×‘ Coordinator ×œ××™×§×¨×•-×©×™×¨×•×ª×™×
 * 
 * ×‘×•×“×§ ×©×”×ª×§×©×•×¨×ª gRPC ×¢×•×‘×“×ª ×•×”×‘×§×©×” ×× ×•×ª×‘×ª ×œ××™×§×¨×•-×©×™×¨×•×ª ×”× ×›×•×Ÿ
 * 
 * ×©×™××•×©:
 *   node scripts/test-coordinator-routing.js
 */

import { routeRequest } from '../src/clients/coordinator.client.js';
import { logger } from '../src/utils/logger.util.js';

console.log('\nğŸ§ª ×‘×“×™×§×ª × ×™×ª×•×‘ Coordinator ×œ××™×§×¨×•-×©×™×¨×•×ª×™×\n');

// ×¨×©×™××ª ×”××™×§×¨×•-×©×™×¨×•×ª×™× ×”×¨×©×•××™×
const MICROSERVICES = {
  'directory': {
    name: 'Directory',
    description: 'Trainers, internal experts, organizational roles',
    example: 'Who can mentor me in backend development?'
  },
  'course-builder': {
    name: 'Course Builder',
    description: 'Courses, modules, learning paths, trainers',
    example: 'Which internal course teaches Python basics?'
  },
  'content-studio': {
    name: 'Content Studio',
    description: 'Lesson content, transcripts, summaries, mind maps',
    example: 'Explain lesson 3 in simple terms.'
  },
  'assessment': {
    name: 'Assessment',
    description: 'Test results, feedback, scores, difficulty progression',
    example: 'Why did I fail the SQL assessment?'
  },
  'skills-engine': {
    name: 'Skills Engine',
    description: 'Skills, competencies, gaps mapping',
    example: 'What skills am I missing to become a data analyst?'
  },
  'learner-ai': {
    name: 'Learner AI',
    description: 'Personalization, learner goals, current path, progress',
    example: 'What should I learn next?'
  },
  'learning-analytics': {
    name: 'Learning Analytics',
    description: 'Performance, engagement, effectiveness metrics',
    example: 'Which course works best for beginners?'
  },
  'hr-management': {
    name: 'HR & Management Reporting',
    description: 'Organizational and managerial insights',
    example: 'Which team has the largest skill gap this quarter?'
  },
  'devlab': {
    name: 'DevLab',
    description: 'Practical exercises and coding performance',
    example: 'Give me a harder React exercise.'
  }
};

// ×‘×“×™×§×•×ª ×œ×¤×™ ×§×˜×’×•×¨×™×•×ª
const TEST_QUERIES = [
  {
    category: 'Directory',
    query: 'Who can mentor me in backend development?',
    expectedService: 'directory',
    description: '×—×™×¤×•×© ×× ×˜×•×¨ - Directory'
  },
  {
    category: 'Course Builder',
    query: 'Which internal course teaches Python basics?',
    expectedService: 'course-builder',
    description: '×—×™×¤×•×© ×§×•×¨×¡ - Course Builder'
  },
  {
    category: 'Content Studio',
    query: 'Explain lesson 3 in simple terms.',
    expectedService: 'content-studio',
    description: '×”×¡×‘×¨ ×©×™×¢×•×¨ - Content Studio'
  },
  {
    category: 'Assessment',
    query: 'Why did I fail the SQL assessment?',
    expectedService: 'assessment',
    description: '×”×¡×‘×¨ ×ª×•×¦××•×ª - Assessment'
  },
  {
    category: 'Skills Engine',
    query: 'What skills am I missing to become a data analyst?',
    expectedService: 'skills-engine',
    description: '× ×™×ª×•×— ×›×™×©×•×¨×™× - Skills Engine'
  },
  {
    category: 'Learner AI',
    query: 'What should I learn next?',
    expectedService: 'learner-ai',
    description: '×”××œ×¦×” ××™×©×™×ª - Learner AI'
  },
  {
    category: 'Learning Analytics',
    query: 'Which course works best for beginners?',
    expectedService: 'learning-analytics',
    description: '× ×™×ª×•×— ×‘×™×¦×•×¢×™× - Learning Analytics'
  },
  {
    category: 'HR & Management',
    query: 'Which team has the largest skill gap this quarter?',
    expectedService: 'hr-management',
    description: '×“×•×—×•×ª ××¨×’×•× ×™×™× - HR & Management'
  },
  {
    category: 'DevLab',
    query: 'Give me a harder React exercise.',
    expectedService: 'devlab',
    description: '×ª×¨×’×™×œ ×§×•×“ - DevLab'
  }
];

async function testRouting(queryConfig) {
  const { category, query, expectedService, description } = queryConfig;
  
  console.log(`\nğŸ“‹ ${description}`);
  console.log(`   Query: "${query}"`);
  console.log(`   Expected: ${expectedService}`);
  
  try {
    const startTime = Date.now();
    
    const response = await routeRequest({
      tenant_id: 'test-tenant-123',
      user_id: 'test-user-456',
      query_text: query,
      metadata: {
        source: 'test-routing-script',
        category: category.toLowerCase(),
        timestamp: new Date().toISOString()
      }
    });
    
    const duration = Date.now() - startTime;
    
    if (!response) {
      console.log(`   âŒ ×œ× ×§×™×‘×œ× ×• ×ª×’×•×‘×” (${duration}ms)`);
      return { success: false, duration };
    }
    
    console.log(`   âœ… ×ª×’×•×‘×” ×”×ª×§×‘×œ×” (${duration}ms)`);
    
    // ×‘×“×™×§×ª target services
    const targetServices = response.target_services || [];
    console.log(`   ğŸ“ Target Services: ${targetServices.length > 0 ? targetServices.join(', ') : 'None'}`);
    
    // ×‘×“×™×§×ª normalized fields
    if (response.normalized_fields) {
      const nf = response.normalized_fields;
      const successfulService = nf.successful_service || 'None';
      const rankUsed = nf.rank_used || 'N/A';
      const qualityScore = nf.quality_score || 'N/A';
      
      console.log(`   ğŸ¯ Successful Service: ${successfulService}`);
      console.log(`   ğŸ“Š Rank Used: ${rankUsed}`);
      console.log(`   â­ Quality Score: ${qualityScore}`);
      
      // ×‘×“×™×§×” ×× ×”× ×™×ª×•×‘ ×”×™×” × ×›×•×Ÿ
      const isCorrect = successfulService.toLowerCase().includes(expectedService) ||
                       targetServices.some(s => s.toLowerCase().includes(expectedService));
      
      if (isCorrect) {
        console.log(`   âœ… × ×™×ª×•×‘ × ×›×•×Ÿ!`);
      } else {
        console.log(`   âš ï¸  × ×™×ª×•×‘ ×©×•× ×” ××”×¦×¤×•×™`);
        console.log(`      ×¦×¤×•×™: ${expectedService}`);
        console.log(`      ×§×™×‘×œ× ×•: ${successfulService}`);
      }
      
      return {
        success: true,
        duration,
        targetServices,
        successfulService,
        rankUsed,
        qualityScore,
        isCorrect
      };
    }
    
    return { success: true, duration, targetServices };
    
  } catch (error) {
    console.log(`   âŒ ×©×’×™××”: ${error.message}`);
    return { success: false, error: error.message };
  }
}

async function runAllTests() {
  console.log('ğŸš€ ××ª×—×™×œ ×‘×“×™×§×•×ª × ×™×ª×•×‘...\n');
  console.log(`ğŸ“Š ${TEST_QUERIES.length} ×‘×“×™×§×•×ª ××•×›× ×•×ª\n`);
  
  const results = [];
  
  for (const testQuery of TEST_QUERIES) {
    const result = await testRouting(testQuery);
    results.push({
      ...testQuery,
      ...result
    });
    
    // ×”×¤×¡×§×” ×§×¦×¨×” ×‘×™×Ÿ ×‘×“×™×§×•×ª
    await new Promise(resolve => setTimeout(resolve, 500));
  }
  
  // ×¡×™×›×•×
  console.log('\n' + '='.repeat(60));
  console.log('ğŸ“Š ×¡×™×›×•× ×ª×•×¦××•×ª');
  console.log('='.repeat(60));
  
  const successful = results.filter(r => r.success);
  const failed = results.filter(r => !r.success);
  const correctRouting = results.filter(r => r.isCorrect);
  
  console.log(`\nâœ… ×”×¦×œ×™×—×•: ${successful.length}/${results.length}`);
  console.log(`âŒ × ×›×©×œ×•: ${failed.length}/${results.length}`);
  console.log(`ğŸ¯ × ×™×ª×•×‘ × ×›×•×Ÿ: ${correctRouting.length}/${successful.length}`);
  
  if (successful.length > 0) {
    const avgDuration = successful.reduce((sum, r) => sum + (r.duration || 0), 0) / successful.length;
    console.log(`â±ï¸  ×–××Ÿ ×××•×¦×¢: ${Math.round(avgDuration)}ms`);
  }
  
  // ×¤×™×¨×•×˜ ×œ×¤×™ ×§×˜×’×•×¨×™×”
  console.log('\nğŸ“‹ ×¤×™×¨×•×˜ ×œ×¤×™ ×§×˜×’×•×¨×™×”:');
  for (const result of results) {
    const status = result.success 
      ? (result.isCorrect ? 'âœ…' : 'âš ï¸')
      : 'âŒ';
    console.log(`   ${status} ${result.category}: ${result.successfulService || 'No response'}`);
  }
  
  // ×”××œ×¦×•×ª
  console.log('\nğŸ’¡ ×”××œ×¦×•×ª:');
  if (failed.length > 0) {
    console.log('   - ×‘×“×•×§ ××ª ×”×—×™×‘×•×¨ ×œ-Coordinator');
    console.log('   - ×‘×“×•×§ ×©×”×—×ª×™××•×ª ×ª×§×™× ×•×ª');
  }
  if (correctRouting.length < successful.length) {
    console.log('   - Coordinator ×× ×ª×‘ ×œ×©×™×¨×•×ª×™× ×©×•× ×™× ××”×¦×¤×•×™');
    console.log('   - ×–×” ×™×›×•×œ ×œ×”×™×•×ª ×ª×§×™×Ÿ - Coordinator ××©×ª××© ×‘-AI routing');
  }
  if (successful.length === results.length && correctRouting.length === successful.length) {
    console.log('   âœ… ×”×›×œ ×¢×•×‘×“ ××¦×•×™×Ÿ!');
  }
  
  console.log('\n');
}

// ×”×¨×¦×”
runAllTests().catch((error) => {
  console.error('\nâŒ ×©×’×™××” ×›×œ×œ×™×ª:', error);
  process.exit(1);
});

